<resources>
    <string name="app_name">GABOSAFETY_DEMO</string>
    <string name="app_name_in_splash">GABOSAFETY\nDEMO</string>
    <string name="app_name_in_top">GABOSAFETY DEMO</string>

    <string name="kakao_native_app_key">2ec0ef7ff1549353fb1a5a9d4ac4b0ea</string>
    <string name="scheme_kakao_app_key">kakao2ec0ef7ff1549353fb1a5a9d4ac4b0ea</string>

    <!-- Popup -->
    <string name="pop_network_error_title">네트워크 에러</string>
    <string name="pop_network_error_description">네트워크에 연결할 수 없습니다.\n앱을 종료합니다.</string>
    <string name="pop_emergency_completed_title">알림</string>
    <string name="pop_emergency_completed_description">긴급신고가 완료되었습니다.</string>
    <string name="pop_emergency_cancel_title">알림</string>
    <string name="pop_emergency_cancel_description">긴급신고를 취소하시겠습니까?</string>
    <string name="pop_btn_confirm">확인</string>
    <string name="pop_btn_yes">네</string>
    <string name="pop_btn_no">아니오</string>
    <string name="pop_monitoring_finish_description">귀가모니터링을 종료하시겠습니까?</string>
    <string name="pop_monitoring_setting_error_title">출발지와 도착지를 설정해주세요.</string>
    <string name="pop_monitoring_running_title">귀가모니터링 실행 중</string>
    <string name="pop_monitoring_running_description">귀가 모니터링이 실행 중입니다. \n출발지와 도착지를 변경할 수 없습니다.</string>
    <string name="pop_sign_message">회원 가입이 성공적으로 완료되었습니다.\n안심벨 기기설정을 통해 세부설정이 가능합니다.</string>
    <string name="pop_register_message">연결하시겠습니까?</string>
    <string name="pop_failed_permission_message">원활한 서비스(데모) 이용을 위해\n모든 권한 허용이 필요합니다.</string>

    <!--Main-->
    <string name="main_registered_device">등록기기</string>
    <string name="main_no_registered_device_des">현재 등록된 기기가 없습니다.</string>
    <string name="main_device_registration">기기 등록</string>
    <string name="main_device_settings">기기설정</string>
    <string name="main_emergency_report">긴급신고</string>
    <string name="main_check_report_details">신고내역 확인</string>
    <string name="main_monitoring">귀가 모니터링</string>
    <string name="main_facilities">안심시설</string>

    <!--Report-->
    <string name="report_report_screen">신고화면</string>
    <string name="report_cancellation">취소</string>
    <string name="report_report">즉시 신고</string>

    <!--ReportDetail-->
    <string name="report_details_report_details">신고내역</string>
    <string name="report_details_confirm">신고내역확인</string>
    <string name="report_details_subtitle">순번 / 일자-시간 / 주체 / 액션</string>
    <string name="report_details_subject">주체</string>
    <string name="report_details_action">액션</string>

    <!--RegisterDevice-->
    <string name="register_device_title">안심벨 기기 설정</string>
    <string name="register_device_registration">기기등록</string>
<!--    <string name="register_device_scan">스캔</string>-->
    <string name="register_device_scan">안심벨 등록</string>
<!--    <string name="register_device_scan_cancellation">스캔 취소</string>-->
    <string name="register_device_scan_cancellation">스캔 중지</string>
    <string name="register_device_registration_cancellation">등록 취소</string>
    <string name="register_device_finding_the_device">기기를 찾고 있습니다...</string>
    <string name="register_device_connection">연결</string>
    <string name="register_device_not_found">기기를 찾지 못했습니다\n스캔 재시도</string>
    <string name="register_device_message1">1. 안심벨의 긴급신고와 플래시 버튼을 동시에 3초간 누릅니다.</string>
    <string name="register_device_message2">2. 전원이 켜지고 부저음과 동시에 녹색등이 점멸하면서\n&#160;&#160;&#160;&#160;&#160;페어링 대기 상태가 됩니다.</string>
    <string name="register_device_message3">3. 안심벨을 휴대폰에 근접시킵니다.</string>
    <string name="register_device_message4">4. 하단의 안심벨 등록 버튼을 누릅니다.</string>
    <string name="register_device_message5">5. 페어링 완료 시 부저음 발생 후 청색등이 점멸합니다.</string>

    <!--DeviceSettings-->
    <string name="device_settings_connection_completed">연결 완료</string>
    <string name="device_settings_unconnected">연결 안됨</string>
    <string name="device_settings_fw_version">FW 버전 :</string>
    <string name="device_settings_battery_status">배터리 상태 :</string>
    <string name="device_settings_battery_connected">연결됨</string>
    <string name="device_settings_battery_charging">충전</string>
    <string name="device_settings_battery_charged_completed">충전완료</string>
    <string name="device_settings_battery_low">배터리부족</string>
    <string name="device_settings_battery_unconnected">연결 안됨</string>
    <string name="device_settings_bell">벨 :</string>
    <string name="device_settings_led">LED :</string>
    <string name="device_settings_on">ON</string>
    <string name="device_settings_off">OFF</string>
    <string name="device_settings_app_to_bell">APP to BELL</string>
    <string name="device_settings_status_check">상태 체크</string>
    <string name="device_settings_update">업데이트</string>
    <string name="device_settings_bell_on">벨 ON</string>
    <string name="device_settings_bell_off">벨 OFF</string>
    <string name="device_settings_led_on">LED ON</string>
    <string name="device_settings_led_off">LED OFF</string>
    <string name="device_settings_disconnect">연결 해제</string>
    <string name="device_settings_device_deletion">기기 삭제</string>
    <string name="device_settings_reconnect">재연결</string>

    <!--SearchAddress-->
    <string name="address_road_name">(도로명) %1$s</string>
    <string name="address_name">(지번) %1$s</string>

    <!--Membership-->
    <string name="membership_title">회원가입</string>
    <string name="membership_sub_title">회원기본 정보</string>
    <string name="membership_id">아이디</string>
    <string name="membership_password">패스워드</string>
    <string name="membership_nickname">회원명</string>
    <string name="membership_birth_date">생년월</string>
    <string name="membership_birth_date_hint">ex. 8510</string>
    <string name="membership_phone_numbser">휴대폰번호</string>
    <string name="membership_phone_numbser_hint">ex. 01012345678</string>
    <string name="membership_title_district">거주지 관리구청</string>
    <string name="membership_district">관리구청</string>
    <string name="membership_district_hint">ex. 마포구</string>
    <string name="membership_register">가입하기</string>

    <!--Sign in-->
    <!--string name="welcome_message">안전한 귀가길을 위한 필수 서비스\n&quot;안심벨&quot;에 오신걸 환영합니다.</string-->
    <string name="welcome_message">안전한 귀가길을 위한 필수 서비스\nGABOSAFETY</string>

    <string name="prototype_message">본 어플리케이션은 프로토타입 버전입니다.\n상업용 버전에서 포돌이, 포순이 캐릭터는 변경될 수 있습니다.</string>

</resources>