<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_device_connection_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/device_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="기기 설정 화면"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="GBSOS-XXX-1234" />

            <Button
                android:id="@+id/btn_connect_status"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:background="@color/blue"
                android:text="@string/device_settings_connection_completed"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_disconnect_status"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:background="@color/red"
                android:text="@string/device_settings_battery_unconnected"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/device_settings_des"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="30dp"
            android:background="@color/black_op_66"
            android:text="@string/report_details_report_details"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_device_connection_check">

            <TextView
                android:id="@+id/tv_fw_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/device_settings_fw_version"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_fw_version_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/tv_fw_version"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="aaa" />

            <TextView
                android:id="@+id/tv_battery_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/device_settings_battery_status"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_fw_version" />

            <TextView
                android:id="@+id/tv_battery_status_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/tv_battery_status"
                app:layout_constraintTop_toBottomOf="@id/tv_fw_version"
                tools:text="bbb" />

            <TextView
                android:id="@+id/tv_bell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/device_settings_bell"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_battery_status" />

            <TextView
                android:id="@+id/tv_bell_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/tv_bell"
                app:layout_constraintTop_toBottomOf="@id/tv_battery_status"
                tools:text="ccc" />

            <TextView
                android:id="@+id/tv_led"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/device_settings_led"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_bell" />

            <TextView
                android:id="@+id/tv_led_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_led"
                app:layout_constraintTop_toBottomOf="@id/tv_bell"
                tools:text="ddd" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_app_to_bell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/device_settings_des">

            <TextView
                android:id="@+id/tv_app_to_bell"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="APP to BELL"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_status_check"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@color/pink"
                android:text="@string/device_settings_status_check"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_app_to_bell" />

            <Button
                android:id="@+id/btn_update"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@color/pink"
                android:text="@string/device_settings_update"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_app_to_bell" />

            <Button
                android:id="@+id/btn_bell_on"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@color/pink"
                android:text="@string/device_settings_bell_on"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_status_check" />

            <Button
                android:id="@+id/btn_bell_off"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@color/pink"
                android:text="@string/device_settings_bell_off"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_update" />

            <Button
                android:id="@+id/btn_led_on"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@color/pink"
                android:text="@string/device_settings_led_on"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_bell_on" />

            <Button
                android:id="@+id/btn_led_off"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@color/pink"
                android:text="@string/device_settings_led_off"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_bell_off" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/btn_settings_disconnect"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            android:background="@color/black_op_66"
            android:text="@string/device_settings_disconnect"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/cl_app_to_bell" />

        <Button
            android:id="@+id/btn_device_deletion"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="30dp"
            android:background="@color/black_op_66"
            android:visibility="gone"
            android:text="@string/device_settings_device_deletion"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            app:layout_goneMarginBottom="20dp"
            app:layout_constraintTop_toBottomOf="@id/btn_settings_disconnect" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>